--- a/music/style.css
+++ b/music/style.css
@@ -6,6 +6,22 @@ h3 {
 
 	}
 
+h4 {
+
+	font-family: 'Open Sans Condensed', sans-serif;
+	font-size: 22px;
+	color: #222; 
+
+	}
+
+li {
+
+	font-family: 'Helvetica', 'Arial', sans-serif;
+    color: #333333;
+    font-size: 18px;
+
+	}
+
 span {
 
 	color: #222;
