--- a/music/style.css
+++ b/music/style.css
@@ -14,14 +14,16 @@ h4 {
 
 	}
 
-li {
+li span{
 
 	font-family: 'Helvetica', 'Arial', sans-serif;
     color: #333333;
     font-size: 18px;
+    font-weight: bold;
 
 	}
 
+/*
 span {
 
 	color: #222;
@@ -31,6 +33,7 @@ span {
 	line-height: 24px;
 
 	}
+*/
 
 .F {
 
